[tool.poetry]
name = "kasm-python"
version = "0.1.0"
description = "A Python library for interacting with a Kasm instance"
authors = ["Lewis England"]
license = "GNU GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
